--- a/UnicampDiscover/package.json
+++ b/UnicampDiscover/package.json
@@ -6,18 +6,22 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "firebase emulators:exec --only firestore 'jest --runInBand --silent=false'"
   },
   "dependencies": {
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
+    "firebase-admin": "^11.10.1",
     "jest": "^29.7.0",
     "react": "18.2.0",
     "react-native": "0.72.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@firebase/rules-unit-testing": "^3.0.1",
+    "@types/jest": "^29.5.5",
     "@types/react": "~18.2.14",
     "typescript": "^5.1.3"
   },
