--- a/.github/workflows/buildAndTest.yaml
+++ b/.github/workflows/buildAndTest.yaml
@@ -14,6 +14,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm run test
+      - run: cd UnicampDiscover && npm install
+      - run: cd UnicampDiscover && npm run build --if-present
+      - run: cd UnicampDiscover && npm run test
