checking for test script before execute it into test step because ci its been created before tests

--- a/.github/workflows/buildAndTest.yaml
+++ b/.github/workflows/buildAndTest.yaml
@@ -16,4 +16,4 @@ jobs:
           node-version: '18.x'
       - run: cd UnicampDiscover && npm install
       - run: cd UnicampDiscover && npm run build --if-present
-      - run: cd UnicampDiscover && npm run test
+      - run: cd UnicampDiscover && npm run test --if-present
