--- a/UnicampDiscover/package.json
+++ b/UnicampDiscover/package.json
@@ -9,9 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.4.0",
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.3.1",
+    "firebase": "^10.4.0",
     "jest": "^29.7.0",
     "react": "18.2.0",
     "react-native": "0.72.4"
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/react-native-vector-icons": "^6.4.14",
     "typescript": "^5.1.3"
   },
   "private": true
