--- a/UnicampDiscover/package.json
+++ b/UnicampDiscover/package.json
@@ -9,12 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
+    "@react-navigation/native": "^6.1.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
     "jest": "^29.7.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-paper": "^5.10.4",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-material-bottom-tabs": "^2.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
