--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "expo": "^49.0.11",
     "firebase": "^10.3.1",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-reanimated": "^3.5.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-navigation-material-bottom-tabs": "^2.3.5",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.21"
+    "@types/react": "^18.2.21",
+    "@types/react-native-vector-icons": "^6.4.14"
   }
 }
