--- a/UnicampDiscover/package.json
+++ b/UnicampDiscover/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "convert-csv-to-json": "^2.0.0",
     "expo": "~49.0.10",
+    "expo-document-picker": "~11.5.4",
+    "expo-file-system": "~15.4.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
     "jest": "^29.7.0",
@@ -30,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/objects-to-csv": "^1.3.3",
     "@types/react": "~18.2.14",
     "typescript": "^5.1.3"
   },
