--- a/UnicampDiscover/package.json
+++ b/UnicampDiscover/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-community/viewpager": "^5.0.11",
@@ -22,8 +23,9 @@
     "firebase": "^10.3.1",
     "jest": "^29.7.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-paper": "^5.11.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.11",
     "@types/objects-to-csv": "^1.3.3",
     "@types/react": "~18.2.14",
     "typescript": "^5.1.3"
