--- a/UnicampDiscover/package.json
+++ b/UnicampDiscover/package.json
@@ -13,14 +13,15 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.20",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
     "jest": "^29.7.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.10.4",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
