--- a/UnicampDiscover/package.json
+++ b/UnicampDiscover/package.json
@@ -17,6 +17,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "convert-csv-to-json": "^2.0.0",
     "expo": "~49.0.10",
+    "expo-clipboard": "~4.3.1",
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.5",
     "expo-status-bar": "~1.6.0",
