--- a/UnicampDiscover/package.json
+++ b/UnicampDiscover/package.json
@@ -20,7 +20,8 @@
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.5",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.3.1",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "jest": "^29.7.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
