--- a/.github/workflows/buildAndTest.yaml
+++ b/.github/workflows/buildAndTest.yaml
@@ -1,9 +1,9 @@
 name: "Build and Test"
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 jobs:
   build_and_test:
     name: build_and_test
@@ -14,6 +14,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-      - run: cd UnicampDiscover && npm install
-      - run: cd UnicampDiscover && npm run build --if-present
+      - run: cd UnicampDiscover && yarn install
       - run: cd UnicampDiscover && npm run test --if-present
