--- a/UnicampDiscover/package.json
+++ b/UnicampDiscover/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --passWithNoTests"
   },
   "dependencies": {
     "@react-native-community/viewpager": "^5.0.11",
