--- a/.github/workflows/buildAndTest.yaml
+++ b/.github/workflows/buildAndTest.yaml
@@ -1,7 +1,7 @@
 name: "Build and Test"
 on:
   push:
-    branches: [ main. develop ]
+    branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
 jobs:
