--- a/UnicampDiscover/package.json
+++ b/UnicampDiscover/package.json
@@ -22,6 +22,7 @@
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.5",
     "expo-status-bar": "~1.6.0",
+    "expo-location": "16.3.0",
     "firebase": "^10.3.1",
     "jest": "^29.7.0",
     "react": "18.2.0",
@@ -32,6 +33,7 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-maps": "1.8.3",
     "react-navigation": "^4.4.4",
     "react-navigation-material-bottom-tabs": "^2.3.5"
   },
