--- a/UnicampDiscover/package.json
+++ b/UnicampDiscover/package.json
@@ -15,26 +15,27 @@
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "convert-csv-to-json": "^2.0.0",
     "expo": "~49.0.10",
     "expo-clipboard": "~4.3.1",
     "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.5",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
-    "expo-location": "16.3.0",
     "firebase": "^10.3.1",
     "jest": "^29.7.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
     "react-native-paper": "^5.11.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-maps": "1.8.3",
     "react-navigation": "^4.4.4",
     "react-navigation-material-bottom-tabs": "^2.3.5"
   },
